WiseUpTi-SalesForce/Wise Up Sales Force/src/objects/Contract_Article__c.object
<CustomObject>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Article__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Article</label>
        <referenceTo>Article__c</referenceTo>
        <relationshipLabel>Contract Article</relationshipLabel>
        <relationshipName>Contract_Articles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Can_be_Changed__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Can be Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Can_be_Removed__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Can be Removed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipName>Contract_Clauses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_Lock__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Order Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Article__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Article</label>
        <referenceTo>Contract_Article__c</referenceTo>
        <relationshipLabel>Contract Article</relationshipLabel>
        <relationshipName>Contract_Articles</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Contract Article</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Contract Article Nr.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Article</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>